--- a/.gitignore
+++ b/.gitignore
@@ -30183,3 +30183,78 @@ src/03-clean-architecture-ardalis/01-from-template/tests/01-from-template.UnitTe
 src/02-database-interaction/.vs/02-database-integration/v17/.futdcache.v2
 src/02-database-interaction/.vs/ProjectEvaluation/02-database-integration.metadata.v7.bin
 src/02-database-interaction/.vs/ProjectEvaluation/02-database-integration.projects.v7.bin
+/.vs/01-language/DesignTimeBuild/.dtbcache.v2
+/.vs/01-language/v17/.futdcache.v2
+/.vs/01-language/v17/.suo
+/.vs/01-language/v17/TestStore/0/000.testlog
+/.vs/01-language/v17/TestStore/0/testlog.manifest
+/.vs/02-database-integration/DesignTimeBuild/.dtbcache.v2
+/.vs/02-database-integration/v17/.futdcache.v2
+/.vs/02-database-integration/v17/.suo
+/.vs/02-database-integration/v17/TestStore/0/000.testlog
+/.vs/02-database-integration/v17/TestStore/0/testlog.manifest
+/.vs/03-clean-architecture-ardalis/config/applicationhost.config
+/.vs/03-clean-architecture-ardalis/DesignTimeBuild/.dtbcache.v2
+*.bin
+.vs/03-clean-architecture-ardalis/v17/.futdcache.v2
+.vs/03-clean-architecture-ardalis/v17/.suo
+.vs/03-clean-architecture-ardalis/v17/TestStore/0/000.testlog
+.vs/03-clean-architecture-ardalis/v17/TestStore/0/testlog.manifest
+.vs/DotnetSamples/DesignTimeBuild/.dtbcache.v2
+.vs/DotnetSamples/v16/.suo
+.vs/DotnetSamples/v17/.futdcache.v2
+.vs/DotnetSamples/v17/.suo
+.vs/DotnetSamples/v17/TestStore/0/000.testlog
+.vs/DotnetSamples/v17/TestStore/0/testlog.manifest
+01-language/.vs/01-language/DesignTimeBuild/.dtbcache.v2
+01-language/.vs/01-language/v17/.futdcache.v2
+01-language/.vs/01-language/v17/.suo
+01-language/.vs/01-language/v17/DocumentLayout.backup.json
+01-language/.vs/01-language/v17/DocumentLayout.json
+01-language/.vs/Solution/DesignTimeBuild/.dtbcache.v2
+01-language/.vs/Solution/v17/.futdcache.v2
+01-language/.vs/Solution/v17/.suo
+01-language/.vs/Solution/v17/DocumentLayout.backup.json
+01-language/.vs/Solution/v17/DocumentLayout.json
+01-language/01-functions/01-simple-case/bin/Debug/net6.0/01.simple.case.deps.json
+01-language/01-functions/01-simple-case/bin/Debug/net6.0/01.simple.case.runtimeconfig.json
+01-language/01-functions/01-simple-case/bin/Debug/net7.0/01.simple.case.deps.json
+01-language/01-functions/01-simple-case/bin/Debug/net7.0/01.simple.case.runtimeconfig.json
+/01-language/01-functions/01-simple-case/obj/Debug/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+/01-language/01-functions/01-simple-case/obj/Debug/net5.0/01.simple.case.AssemblyInfo.cs
+/01-language/01-functions/01-simple-case/obj/Debug/net5.0/01.simple.case.AssemblyInfoInputs.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net5.0/01.simple.case.csproj.FileListAbsolute.txt
+/01-language/01-functions/01-simple-case/obj/Debug/net5.0/01.simple.case.csprojAssemblyReference.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net5.0/01.simple.case.GeneratedMSBuildEditorConfig.editorconfig
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/01.simple.case.AssemblyInfo.cs
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/01.simple.case.AssemblyInfoInputs.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/01.simple.case.assets.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/01.simple.case.csproj.BuildWithSkipAnalyzers
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/01.simple.case.csproj.CoreCompileInputs.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/01.simple.case.csproj.FileListAbsolute.txt
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/01.simple.case.GeneratedMSBuildEditorConfig.editorconfig
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/01.simple.case.genruntimeconfig.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net6.0/_IsIncrementalBuild
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/.NETCoreApp,Version=v7.0.AssemblyAttributes.cs
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/01.simple.case.AssemblyInfo.cs
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/01.simple.case.AssemblyInfoInputs.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/01.simple.case.assets.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/01.simple.case.csproj.BuildWithSkipAnalyzers
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/01.simple.case.csproj.CoreCompileInputs.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/01.simple.case.csproj.FileListAbsolute.txt
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/01.simple.case.GeneratedMSBuildEditorConfig.editorconfig
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/01.simple.case.genruntimeconfig.cache
+/01-language/01-functions/01-simple-case/obj/Debug/net7.0/01.simple.case.sourcelink.json
+/01-language/01-functions/01-simple-case/obj/Debug/netcoreapp3.1
+/01-language/01-functions/01-simple-case/obj/Debug/netcoreapp3.1/.NETCoreApp,Version=v3.1.AssemblyAttributes.cs
+/01-language/01-functions/01-simple-case/obj/Debug/netcoreapp3.1/01.simple.case.AssemblyInfo.cs
+/01-language/01-functions/01-simple-case/obj
+/01-language/01-functions/02-optional-params/bin/Debug
+/01-language/01-functions/02-optional-params/obj
+/01-language/01-functions/02-optional-params/obj/Debug/net5.0/.NETCoreApp,Version=v5.0.AssemblyAttributes.cs
+/01-language/01-functions/03-ref-params/bin/Debug
+/01-language/01-functions/03-ref-params/obj/Debug
+/01-language/01-functions/03-ref-params/obj
