--- a/.gitignore
+++ b/.gitignore
@@ -30320,3 +30320,4 @@ obj
 /03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.Core/.vs/03-clean-architecture-ardalis.Core/v17/.futdcache.v2
 /03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.Core/.vs/03-clean-architecture-ardalis.Core/v17/TestStore/0/000.testlog
 /03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.Core/.vs/03-clean-architecture-ardalis.Core/v17/TestStore/0/testlog.manifest
+/03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.Web/log20241205.txt
