--- a/03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.UseCases/03-clean-architecture-ardalis.UseCases.csproj
+++ b/03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.UseCases/03-clean-architecture-ardalis.UseCases.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.Result" />
     <PackageReference Include="MediatR" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\MatfRS2--ardalis--Result\src\Ardalis.Result\Ardalis.Result.csproj" />
     <ProjectReference Include="..\03-clean-architecture-ardalis.Core\03-clean-architecture-ardalis.Core.csproj" />
   </ItemGroup>
 
