--- a/03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.Infrastructure/03-clean-architecture-ardalis.Infrastructure.csproj
+++ b/03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.Infrastructure/03-clean-architecture-ardalis.Infrastructure.csproj
@@ -2,8 +2,6 @@
   <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.1.3" />
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.SharedKernel" />
-    <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" />
     <PackageReference Include="Azure.Identity" />
     <PackageReference Include="MailKit" />
     <PackageReference Include="MediatR" />
@@ -18,6 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\MatfRS2--ardalis--SmartEnum\src\SmartEnum\SmartEnum.csproj" />
+    <ProjectReference Include="..\..\..\..\..\MatfRS2--ardalis--Specification\Specification.EntityFrameworkCore\src\Ardalis.Specification.EntityFrameworkCore\Ardalis.Specification.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\03-clean-architecture-ardalis.Core\03-clean-architecture-ardalis.Core.csproj" />
     <ProjectReference Include="..\03-clean-architecture-ardalis.UseCases\03-clean-architecture-ardalis.UseCases.csproj" />
   </ItemGroup>
