--- a/.gitignore
+++ b/.gitignore
@@ -30322,3 +30322,6 @@ obj
 /03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.Core/.vs/03-clean-architecture-ardalis.Core/v17/TestStore/0/testlog.manifest
 /03-clean-architecture-ardalis/02-source-included/src/03-clean-architecture-ardalis.Web/log20241205.txt
 /03-clean-architecture-ardalis/.vs/03-clean-architecture-02-source-included/v17/.futdcache.v2
+/02-database-interaction/.vs
+03-clean-architecture-ardalis/.vs/03-clean-architecture-02-source-included/v17/TestStore/0/000.testlog
+03-clean-architecture-ardalis/.vs/03-clean-architecture-02-source-included/v17/TestStore/0/testlog.manifest
