--- a/02-database-interaction/01-ef-mysql/.develop-vlado.env
+++ b/02-database-interaction/01-ef-mysql/.develop-vlado.env
@@ -1,3 +1,3 @@
 MYSQL_ROOT_PASSWORD=MySQL123
-MYSQL_DATA_VOLUME_PATH=c/vlado/_docker_volumes/mysql_rs2
+MYSQL_DATA_VOLUME_PATH=c:/vlado/_docker_volumes/mysql_rs2
 MYSQL_DATABASE=skole
