--- a/.gitignore
+++ b/.gitignore
@@ -30326,3 +30326,7 @@ obj
 /02-database-interaction/.vs
 03-clean-architecture-ardalis/.vs/03-clean-architecture-02-source-included/v17/TestStore/0/000.testlog
 03-clean-architecture-ardalis/.vs/03-clean-architecture-02-source-included/v17/TestStore/0/testlog.manifest
+03-clean-architecture-ardalis/.vs/03-clean-architecture-01-from-template/CopilotIndices/17.14.1204.46620/CodeChunks.db
+03-clean-architecture-ardalis/.vs/03-clean-architecture-01-from-template/CopilotIndices/17.14.1204.46620/SemanticSymbols.db
+03-clean-architecture-ardalis/.vs/03-clean-architecture-02-source-included/CopilotIndices/17.14.1204.46620/CodeChunks.db
+03-clean-architecture-ardalis/.vs/03-clean-architecture-02-source-included/CopilotIndices/17.14.1204.46620/SemanticSymbols.db
