metthod names capitalized

--- a/.gitignore
+++ b/.gitignore
@@ -30330,3 +30330,9 @@ obj
 03-clean-architecture-ardalis/.vs/03-clean-architecture-01-from-template/CopilotIndices/17.14.1204.46620/SemanticSymbols.db
 03-clean-architecture-ardalis/.vs/03-clean-architecture-02-source-included/CopilotIndices/17.14.1204.46620/CodeChunks.db
 03-clean-architecture-ardalis/.vs/03-clean-architecture-02-source-included/CopilotIndices/17.14.1204.46620/SemanticSymbols.db
+/01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/CodeChunks.db
+/01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/CodeChunks.db-shm
+/01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/CodeChunks.db-wal
+/01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/SemanticSymbols.db
+/01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/SemanticSymbols.db-shm
+/01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/SemanticSymbols.db-wal
