--- a/.gitignore
+++ b/.gitignore
@@ -30336,3 +30336,4 @@ obj
 /01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/SemanticSymbols.db
 /01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/SemanticSymbols.db-shm
 /01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/SemanticSymbols.db-wal
+/01-language/.vs/01-language/v18/.suo
