--- a/02-database-interaction/01-ef-mysql/HelloConsoleEfMySql.csproj
+++ b/02-database-interaction/01-ef-mysql/HelloConsoleEfMySql.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MySql.EntityFrameworkCore" Version="6.0.7" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="10.0.0-rc" />
   </ItemGroup>
 
 </Project>
