--- a/.gitignore
+++ b/.gitignore
@@ -30337,3 +30337,4 @@ obj
 /01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/SemanticSymbols.db-shm
 /01-language/.vs/01-language/CopilotIndices/17.14.1368.60722/SemanticSymbols.db-wal
 /01-language/.vs/01-language/v18/.suo
+/03-clean-architecture-ardalis/.vs
